@@ -16,6 +16,7 @@ OpenLDAP 2.4.20 Engineering
 	Build Environment
 		Fixed slapd MAXPATHLEN handling (ITS#6342)
 		Fixed test057 handling of memberof/refint (ITS#6343)
+		Fixed slapd test error ignoring (ITS#6345)
 	Documentation
 		ldap_get_dn(3) typos (ITS#5366)
 		slapd.conf(5) note hex server IDs (ITS#6297)
